--- a/main.css
+++ b/main.css
@@ -10,12 +10,12 @@
 .alert-close {
   background: transparent;
   border: none;
-  
 }
 
 .yello-bg {
   background: yellow;
 }
+
 .main-bg {
   background-image: url(images/bg6.jpg);
   background-size: cover;
@@ -53,6 +53,11 @@
   color: white;
 }
 
+.nav-menu h4 {
+  font-size: 25px;
+  transition: all 0.3s;
+}
+
 .nav-sub {
   display: none;
   position: fixed;
@@ -63,6 +68,7 @@
 .menu-btn {
   background: none;
   border: none;
+  color: white;
 }
 
 #email-alert, #password-alert {
@@ -87,6 +93,7 @@
   transform: translateX(0px);
 }
 
+/*Carousel*/
 .slide-box {
   width: 100vw;
   float: left;
@@ -116,4 +123,54 @@
 .nav-black {
   background: white;
   color: black;
+}
+
+.nav-black h4 {
+  font-size: 20px;
+}
+
+.nav-black .menu-btn {
+  color: black;
+}
+
+/*Tab*/
+ul.list {
+	list-style-type: none;
+	margin: 0;
+	padding: 0;
+	border-bottom: 1px solid #ccc;
+}
+ul.list::after {
+  content: '';
+  display: block;
+  clear: both;
+}
+.tab-button {
+  display: block;
+  padding: 10px 20px 10px 20px;
+  float: left;
+  margin-right: -1px;
+  margin-bottom: -1px;
+  color: grey;
+  text-decoration: none;
+  cursor: pointer;
+}
+.active {
+  border-top: 2px solid orange;
+  border-right: 1px solid #ccc;
+  border-bottom: 1px solid white;
+  border-left: 1px solid #ccc;
+  color: black;
+  margin-top: -2px;
+}
+.tab-content {
+  display: none;
+  padding: 10px;
+}
+.show {
+  display: block;
+}
+
+.size-select {
+  display: none;
 }
